--- a/public/css/indexstyle.css
+++ b/public/css/indexstyle.css
@@ -76,7 +76,7 @@ section img{
     max-width: 350px;
     margin-left: 30px;
 }
-section:nth-child(even){
+section:nth-child(odd){
     position: relative;
     justify-content: center;
     align-items: center;
