--- a/public/css/indexstyle.css
+++ b/public/css/indexstyle.css
@@ -1,185 +1,12 @@
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
     scroll-behavior: smooth;
 }
-header{
-    position: fixed;
-    width: 100%;
-    height: 80px;
-    padding: 0 100px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: #111;
-    z-index: 1000;
-}
-header .logo{
-    color: #fff;
-    font-size: 30px;
-    text-decoration: none;
-    letter-spacing: 2px;
-    font-weight: 700;
-}
-header ul{
-    position: relative;
-    display: flex;
-}
-header ul li{
-    position: relative;
-    list-style-type: none;
-}
-header ul li a{
-    position: relative;
-    padding: 5px 10px;
-    color: #fff;
-    display: inline-block;
-    text-decoration: none;
-    cursor: pointer;
-}
-header ul li a.active,
-header ul li a:hover{
-    background-color: #205aff;
-}
-.toggle{
-    display: none;
-}
-section video{
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    pointer-events: none;
-}
-section{
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 100vh;
-    padding: 50px 50px 50px;
-}
-section h2{
-    margin-top: 25px;
-    font-size: 2.5em;
-    text-transform: uppercase;
-}
-section p{
-    margin-top: 15px;
-    font-size: 18px;
-}
-section img{
-    max-width: 350px;
-    margin-left: 30px;
-}
-section:nth-child(odd){
-    position: relative;
-    justify-content: center;
-    align-items: center;
-    background-color: #111;
-    color: #fff;
-}
-
-.contactform .inputbox input,
-.contactform .inputbox textarea{
-    width: 100%;
-    padding: 5px 0;
-    font-size: 16px;
-    margin: 10px 0;
-    border: none;
-    border-bottom: 2px solid #333;
-    outline: none;
-    resize: none;
-}
-.contactform .inputbox input[type="submit"]{
-    width: 100px;
-    background-color: #00bcd4;
-    color:#fff;
+footer{
+    background-color: #201E1E;
+    color: white;
     padding: 10px;
-    cursor: pointer;
-    border: none;
-    font-size: 18px;
+    text-align: center;
 }
-ol li{
-    margin-top: 10px;
-    margin-left: 25px;
+p,li,label{
     font-size: 18px;
-}
-select{
-    padding: 8px 10px;
-    font-size: 18px;
-}
-
-@media (max-width:992px)
-{
-    header ul{
-        position: absolute;
-        top: 80px;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-        padding: 50px 100px;
-        text-align: center;
-        overflow: auto;
-        transition: 0.5s;
-        background: #111;
-        flex-direction: column;
-        transform: translateY(-200%);
-    }
-    header.active ul{
-        transform: translateY(0);
-    }
-    header ul li a{
-        margin: 5px 0;
-        font-size: 24px;
-    }
-    .toggle{
-        display: block;
-        position: relative;
-        width: 30px;
-        height: 30px;
-        cursor: pointer;
-    }
-    .toggle:before{
-        content: '';
-        position: absolute;
-        top: 4px;
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-        z-index: 1;
-        box-shadow: 0 10px 0 #fff;
-        transition: 0.5s;
-    }
-    .toggle:after{
-        content: '';
-        position: absolute;
-        bottom: 4px;
-        width: 100%;
-        height: 2px;
-        background-color: #fff;
-        z-index: 1;
-        transition: 0.5s;
-    }
-    header.active .toggle:before{
-        top: 14px;
-        transform: rotate(45deg);
-        box-shadow: 0 0 0 #fff;
-    }
-    header.active .toggle:after{
-        bottom: 14px;
-        transform: rotate(-45deg);
-    }
-    section{
-        padding: 100px 50px 50px;
-        flex-direction: column;
-    }
-    section img{
-        margin-top: 50px;
-        max-width: 100%;
-    }
 }
